# visualization.waveforhue

./: CMakeLists.txt  package.mk
debian/: changelog  changelog.in  control  copyright  kodi-visualization-wavforhue.install  rules
src/: Main.cpp  Main_gles.cpp  WavforHue.sln  WavforHue.vcxproj  WavforHue.vcxproj.filters  libcurl.lib
visualization.waveforhue/: Linux-Note.txt  addon.xml
visualization.waveforhue/resources/: settings.xml
visualization.waveforhue/resources/language/English/: strings.po
visualization.waveforhue/resources/language/English (US)/: strings.po
visualization.wavforhue/: addon.xml  addon.xml.in  changelog.txt
visualization.wavforhue/resources/: settings.xml
visualization.wavforhue/resources/language/English/: strings.po
visualization.wavforhue/resources/language/English (US)/: strings.po
